--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "rxjs": "^7.3.0",
-    "styled-components": "^5.3.1",
+    "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -60,6 +60,7 @@
   "repository": "git@gitlab.com:arnab8/nuffsaid-frontend-coding-challenge.git",
   "devDependencies": {
     "@types/faker": "^5.5.8",
-    "@types/lodash": "^4.14.172"
+    "@types/lodash": "^4.14.172",
+    "@types/styled-components": "^5.1.19"
   }
 }
